# algorithmic-diff

./: .gitignore  CMakeLists.txt  README.org
conf/: algodiff-config.h.in
include/: function.h  variable.h
src/: diff.h  expression.h  function.cc  main-compose.cc  main.cc  symbolic.cc  symbolic.h  test-multinom.cc  test-sym1.cc  util.cc  util.h  variable.h
test/: test-multinom.cc  test-sym-assign.cc  test-sym-nn.cc  test-variable-compose.cc  test-variable-nn.cc
